tests/integration/snapshots/player/integration__snapshot_player_test__viewport_col_offset_past_content.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Viewport: 15x3 at offset (10, 0)
Buffer size: 80x24
---
