tests/integration/snapshots/player/integration__snapshot_player_test__viewport_empty_buffer.snap
---
source: tests/integration/snapshot_player_test.rs
assertion_line: 1176
expression: output
---
Viewport: 10x4 at offset (0, 0)
Buffer size: 80x24
---
