tests/integration/snapshots/player/integration__snapshot_player_test__viewport_highlight_first_row.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Viewport: 20x5 at offset (0, 0)
Highlighted line: 0
Buffer size: 80x24
---
>>> First                <<<
    Second              
    Third
