tests/integration/snapshots/player/integration__snapshot_player_test__viewport_highlight_last_row.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Viewport: 20x5 at offset (0, 0)
Highlighted line: 4
Buffer size: 80x24
---
    Row 0               
    Row 1               
    Row 2               
    Row 3               
>>> Row 4                <<<
