tests/integration/snapshots/player/integration__snapshot_player_test__viewport_row_shorter_than_view_cols.snap
---
source: tests/integration/snapshot_player_test.rs
assertion_line: 1163
expression: output
---
Viewport: 20x3 at offset (0, 0)
Buffer size: 80x24
---
    Hi
