tests/integration/snapshots/player/integration__snapshot_player_test__viewport_straddling_buffer_boundary.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Viewport: 20x4 at offset (0, 1)
Buffer size: 80x3
---
    Row1
