tests/integration/snapshots/player/integration__snapshot_player_test__viewport_truly_absent_row.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Viewport: 20x3 at offset (0, 5)
Buffer size: 80x5
---
