tests/integration/snapshots/player/integration__snapshot_player_test__viewport_zero_cols.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Viewport: 0x3 at offset (0, 0)
Buffer size: 80x24
---
