tests/integration/snapshots/player/integration__snapshot_player_test__viewport_zero_rows.snap
---
source: tests/integration/snapshot_player_test.rs
expression: output
---
Viewport: 20x0 at offset (0, 0)
Buffer size: 80x24
---
